📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -4206,5 +4206,181 @@
         "published": "Tue, 09 Dec 2025 16:20:18 +0000",
         "source": "AI News",
         "summary": "<p>Accenture and Anthropic are setting out to boost enterprise AI integration with a newly-expanded partnership. While 2024 was defined by corporate curiosity regarding Large Language Models (LLMs), the current mandate for business leaders is operationalising these tools to achieve a return on investment. The new Accenture Anthropic Business Group combines Anthropic\u2019s model capabilities with Accenture\u2019s [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/accenture"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/ford-and-renault-team-up-on-cheaper-evs-in-a-fight-for-our-lives/",
+        "title": "Ford and Renault team up on cheaper EVs in a \u2018fight for our lives\u2019",
+        "link": "https://techcrunch.com/2025/12/09/ford-and-renault-team-up-on-cheaper-evs-in-a-fight-for-our-lives/",
+        "published": "Tue, 09 Dec 2025 18:01:43 +0000",
+        "source": "TechCrunch",
+        "summary": "The automakers will work together to bring two Ford-branded EVs to European dealerships in 2028."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/google-photos-launches-new-video-editing-tools/",
+        "title": "Google Photos launches new video editing tools",
+        "link": "https://techcrunch.com/2025/12/09/google-photos-launches-new-video-editing-tools/",
+        "published": "Tue, 09 Dec 2025 18:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Google Photos' new update helps make editing video reels in the app quicker, such as new templates that already add music and text to clips."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/nasa-and-usps-stop-using-canoo-evs-despite-ceos-pledged-support/",
+        "title": "NASA and USPS stop using Canoo EVs despite CEO\u2019s pledged support",
+        "link": "https://techcrunch.com/2025/12/09/nasa-and-usps-stop-using-canoo-evs-despite-ceos-pledged-support/",
+        "published": "Tue, 09 Dec 2025 17:42:28 +0000",
+        "source": "TechCrunch",
+        "summary": "Canoo's CEO bought the bankrupt startup's assets in April and told the court his \"principal motivation\" was supporting these programs."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/openai-anthropic-and-block-join-new-linux-foundation-effort-to-standardize-the-ai-agent-era/",
+        "title": "OpenAI, Anthropic and Block join new Linux Foundation effort to standardize the AI agent era",
+        "link": "https://techcrunch.com/2025/12/09/openai-anthropic-and-block-join-new-linux-foundation-effort-to-standardize-the-ai-agent-era/",
+        "published": "Tue, 09 Dec 2025 17:28:36 +0000",
+        "source": "TechCrunch",
+        "summary": "Anthropic, Block, and OpenAI  are backing the Linux Foundation\u2019s new Agentic AI Foundation, donating MCP, Goose, and AGENTS.md to standardize AI agents, boost interoperability, and curb proprietary fragmentation."
+    },
+    {
+        "id": "https://www.theverge.com/news/840690/google-photos-video-editing-highlight-reel-updates",
+        "title": "Google Photos&#8217; new video editor makes it more like Capcut",
+        "link": "https://www.theverge.com/news/840690/google-photos-video-editing-highlight-reel-updates",
+        "published": "2025-12-09T13:01:00-05:00",
+        "source": "The Verge",
+        "summary": "The Google Photos app on Android and iOS is getting a video editing overhaul with a redesigned editor, templates for highlight reels, and options for adding custom text overlays and music to individual videos. Highlight reels, which automatically cut together a video featuring selected photos and videos, were already part of Google Photos, but now [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/840883/data-center-moratorium-letter-congress",
+        "title": "Data center construction moratorium is gaining steam",
+        "link": "https://www.theverge.com/news/840883/data-center-moratorium-letter-congress",
+        "published": "2025-12-09T12:48:03-05:00",
+        "source": "The Verge",
+        "summary": "More than 230 groups including Food &#38; Water Watch, Physicians for Social Responsibility, and Greenpeace are demanding a pause on the construction of any new data centers in the US until stronger regulations are in place to prevent soaring electricity rates, water use, and pollution. \"The rapid, largely unregulated rise of data centers to fuel [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-karaoke-gear/",
+        "title": "The Best Karaoke Speakers from Small and Portable to Massive",
+        "link": "https://www.wired.com/gallery/best-karaoke-gear/",
+        "published": "Tue, 09 Dec 2025 18:05:45 +0000",
+        "source": "WIRED",
+        "summary": "Looking to make karaoke night a regular thing? We\u2019ve tested everything from Bluetooth speakers to full-blown PAs."
+    },
+    {
+        "id": "https://www.wired.com/story/openai-economic-research-team-ai-jobs/",
+        "title": "OpenAI Staffer Quits, Alleging Company\u2019s Economic Research Is Drifting Into AI Advocacy",
+        "link": "https://www.wired.com/story/openai-economic-research-team-ai-jobs/",
+        "published": "Tue, 09 Dec 2025 17:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Four sources close to the situation claim OpenAI has become hesitant to publish research on the negative impact of AI. The company says it has only expanded the economic research team\u2019s scope."
+    },
+    {
+        "id": "https://www.wired.com/story/openai-anthropic-and-block-are-teaming-up-on-ai-agent-standards/",
+        "title": "OpenAI, Anthropic, and Block Are Teaming Up to Make AI Agents Play Nice",
+        "link": "https://www.wired.com/story/openai-anthropic-and-block-are-teaming-up-on-ai-agent-standards/",
+        "published": "Tue, 09 Dec 2025 17:06:58 +0000",
+        "source": "WIRED",
+        "summary": "American AI giants are backing a new effort to establish open standards for building agentic software and tools."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/trumps-order-blocking-wind-development-thrown-out-by-court/",
+        "title": "Court: \u201cBecause Trump said to\u201d may not be a legally valid defense",
+        "link": "https://arstechnica.com/tech-policy/2025/12/trumps-order-blocking-wind-development-thrown-out-by-court/",
+        "published": "Tue, 09 Dec 2025 17:47:01 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "The \"arbitrary and capricious\" standard strikes down another administration action."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/nintendo/skyrim-arrives-on-the-switch-2-175200223.html?src=rss",
+        "title": "Skyrim arrives on the Switch 2",
+        "link": "https://www.engadget.com/gaming/nintendo/skyrim-arrives-on-the-switch-2-175200223.html?src=rss",
+        "published": "Tue, 09 Dec 2025 17:52:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>You can add the Switch 2 to the (long) list of platforms where you can play <em>The Elder Scrolls V: Skyrim</em>. The bad news: It costs $60 to play <a class=\"link\" href=\"https://www.engadget.com/2011-11-10-skyrim-review.html\" target=\"_blank\">the 2011 game</a> optimized for <a class=\"link\" href=\"https://www.engadget.com/gaming/nintendo/nintendo-switch-2-review-more-of-what-you-love-120048430.html\" target=\"_blank\">Nintendo's 2025 hardware</a>. The good news: It costs less (or nothing) if you o"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/microsoft-flight-sim-2024-now-has-a-stranger-things-expansion-173944325.html?src=rss",
+        "title": "Microsoft Flight Sim 2024 now has a Stranger Things expansion",
+        "link": "https://www.engadget.com/gaming/microsoft-flight-sim-2024-now-has-a-stranger-things-expansion-173944325.html?src=rss",
+        "published": "Tue, 09 Dec 2025 17:39:44 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><em>Microsoft Flight Simulator 2024 </em><a href=\"https://blog.playstation.com/2025/12/09/microsoft-flight-simulator-2024-introduces-netflixs-stranger-things-expansion/\"><ins>just got a fairly bizarre expansion</ins></a> inspired by the Netflix show <em>Stranger Things</em>. If you've ever wanted to fly over a fictional Indiana town in the 1980s, this is the update for you.</p>\n<p>That's right. The game now lets folks fly over Hawkins, Indiana and check out more than 40 iconic locations from "
+    },
+    {
+        "id": "https://www.engadget.com/social-media/meta-is-trying-to-make-facebook-suck-less-by-simplifying-things-a-bit-171910771.html?src=rss",
+        "title": "Meta is trying to make Facebook suck less by simplifying things a bit",
+        "link": "https://www.engadget.com/social-media/meta-is-trying-to-make-facebook-suck-less-by-simplifying-things-a-bit-171910771.html?src=rss",
+        "published": "Tue, 09 Dec 2025 17:19:10 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Somewhere along its never-ending quest to increase engagement, Meta realized that giving <a class=\"link\" href=\"https://www.engadget.com/social-media/meta-is-bringing-usernames-to-facebook-groups-231405698.html\" target=\"_blank\">Facebook</a> users more of what they want would make it more likely that they'll stick around. The company has announced a bunch of updates designed to help improve the feed and the broader Facebook experience by making it easier to find, create and share interesting th"
+    },
+    {
+        "id": "https://gizmodo.com/2025-sinners-frankenstein-twin-acting-2000696730",
+        "title": "From \u2018Sinners\u2019 to \u2018Frankenstein,\u2019 2025 Put Twins All Over the Movies",
+        "link": "https://gizmodo.com/2025-sinners-frankenstein-twin-acting-2000696730",
+        "published": "Tue, 09 Dec 2025 18:00:23 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Yir Twins\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/yir-twins.jpg\" width=\"1920\" /><br /><br />You may not have realized it while watching movies like 'Sinners' and 'Superman,' but twins were on Hollywood's 2025 agenda."
+    },
+    {
+        "id": "https://gizmodo.com/tiny-robot-lost-under-antarctic-ice-for-8-months-comes-back-with-rare-data-2000697304",
+        "title": "Tiny Robot Lost Under Antarctic Ice for 8 Months Comes Back With Rare Data",
+        "link": "https://gizmodo.com/tiny-robot-lost-under-antarctic-ice-for-8-months-comes-back-with-rare-data-2000697304",
+        "published": "Tue, 09 Dec 2025 17:20:59 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Csiro Argo Float Antarctica\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/csiro-argo-float-antarctica.jpg\" width=\"1921\" /><br /><br />\u201cAgainst the enormity of such a wild region, this is an amazing story of the little float that could.\u201d"
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-grinch-christmas-adventure-switch-deal",
+        "title": "Wreak holiday havoc with 50% off the The Grinch Christmas Adventures on Switch",
+        "link": "https://mashable.com/article/dec-9-grinch-christmas-adventure-switch-deal",
+        "published": "Tue, 09 Dec 2025 17:22:32 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 9, get The Grinch Christmas Adventures for 50% off at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-lego-christmas-table-decoration-deal",
+        "title": "The Lego Christmas Table Decoration is on sale for $24 and itll arrive well before the holidays",
+        "link": "https://mashable.com/article/dec-9-lego-christmas-table-decoration-deal",
+        "published": "Tue, 09 Dec 2025 17:14:03 +0000",
+        "source": "Mashable",
+        "summary": "The Lego Christmas Table Decoration is on sale at Amazon for $23.99, down from the list price of $39.99. That's a 40% discount."
+    },
+    {
+        "id": "https://mashable.com/article/crunchyroll-ends-its-free-streaming-plan",
+        "title": "Crunchyroll ends its free streaming plan",
+        "link": "https://mashable.com/article/crunchyroll-ends-its-free-streaming-plan",
+        "published": "Tue, 09 Dec 2025 17:06:01 +0000",
+        "source": "Mashable",
+        "summary": "Crunchyroll ends its free streaming plan"
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-otterbox-accessories-target-circle-deal",
+        "title": "Target Circle members can score 50% off OtterBox accessories today only",
+        "link": "https://mashable.com/article/dec-9-otterbox-accessories-target-circle-deal",
+        "published": "Tue, 09 Dec 2025 16:57:04 +0000",
+        "source": "Mashable",
+        "summary": "Shop OtterBox accessories at Target on Dec. 9 and score 50% off with a Target Circle account. It's free to join."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ifixit-ai-app-repair-help-appliances-phones-cars-artificial-intelligence/",
+        "title": "I repaired my car and home appliance with iFixIt's new AI app - try it while it's still free",
+        "link": "https://www.zdnet.com/article/ifixit-ai-app-repair-help-appliances-phones-cars-artificial-intelligence/",
+        "published": "Tue, 09 Dec 2025 17:46:50 GMT",
+        "source": "Latest news",
+        "summary": "Trained on more than 125,000 community repair guides, FixBot can offer help repairing thousands of different devices."
+    },
+    {
+        "id": "https://www.zdnet.com/article/hp-series-5-pro-14-inch-portable-monitor-review/",
+        "title": "I took this portable monitor on a work trip, and it supercharged my productivity",
+        "link": "https://www.zdnet.com/article/hp-series-5-pro-14-inch-portable-monitor-review/",
+        "published": "Tue, 09 Dec 2025 17:39:00 GMT",
+        "source": "Latest news",
+        "summary": "HP's Series 5 Pro 14-inch WQXGA portable monitor lets you enjoy a dual-monitor setup on the road with some extra usability perks."
+    },
+    {
+        "id": "https://www.digitalpublicgoods.net/r/peertube",
+        "title": "PeerTube is recognized as a digital public good by Digital Public Goods Alliance",
+        "link": "https://www.digitalpublicgoods.net/r/peertube",
+        "published": "Tue, 09 Dec 2025 17:08:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46207464\">Comments</a>"
     }
 ]
