📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -4382,5 +4382,133 @@
         "published": "Tue, 09 Dec 2025 17:08:37 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46207464\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/amazons-ring-rolls-out-controversial-ai-powered-facial-recognition-feature-to-video-doorbells/",
+        "title": "Amazon\u2019s Ring rolls out controversial, AI-powered facial recognition feature to video doorbells",
+        "link": "https://techcrunch.com/2025/12/09/amazons-ring-rolls-out-controversial-ai-powered-facial-recognition-feature-to-video-doorbells/",
+        "published": "Tue, 09 Dec 2025 19:04:08 +0000",
+        "source": "TechCrunch",
+        "summary": "Amazon says the Ring feature is opt in and the biometric data isn't used to train AI models."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/truecaller-now-lets-users-protect-households-from-scam-calls/",
+        "title": "Truecaller now lets users protect households from scam calls",
+        "link": "https://techcrunch.com/2025/12/09/truecaller-now-lets-users-protect-households-from-scam-calls/",
+        "published": "Tue, 09 Dec 2025 18:46:11 +0000",
+        "source": "TechCrunch",
+        "summary": "Truecaller's Family Protection will be rolled out widely in the first quarter of 2026. The new feature lets up to five people join a family group overseen by one member who acts as the administrator and manages scam-blocking settings for the others."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/780847/best-dad-gift-ideas",
+        "title": "The best gifts for dads that have everything (but deserve more)",
+        "link": "https://www.theverge.com/gadgets/780847/best-dad-gift-ideas",
+        "published": "2025-12-09T14:00:00-05:00",
+        "source": "The Verge",
+        "summary": "What do you get the man who says he has everything? It's a tough question - and one you have a limited amount of time to answer, given the holidays are nearly upon us. You could try dropping subtle hints or asking friends and family for suggestions, but they might save their best ideas for [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/22399419/apple-macbook-air-pro-mac-mini-imac-deals",
+        "title": "The best deals on MacBooks right now",
+        "link": "https://www.theverge.com/22399419/apple-macbook-air-pro-mac-mini-imac-deals",
+        "published": "2025-12-09T14:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Apple currently sells MacBooks equipped with its own M-series processors in a wide range of sizes and price points, all of which run the company\u2019s new operating system, macOS 26. The latest 14-inch MacBook Pro that debuted in October 2025 features the M5 processor, its fastest and most efficient yet, and it\u2019s already $250 off [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/841019/nothing-phone-3a-community-edition",
+        "title": "Nothing&#8217;s community-designed Phone 3A adds some color and matching dice",
+        "link": "https://www.theverge.com/news/841019/nothing-phone-3a-community-edition",
+        "published": "2025-12-09T13:46:14-05:00",
+        "source": "The Verge",
+        "summary": "The Nothing Phone 3A Community Edition revamps Nothing's usual monochrome look with a 90s-inspired design infused by pops of color. It's updating the basic 3A's transparent backplate with a teal tint, plus yellow and magenta buttons. They're also throwing in an accessory too, for the first time, adding a limited edition set of six-sided dice [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/841036/facebook-redesign-instagram-photos-feed-algorithm",
+        "title": "Facebook&#8217;s redesign is making it more like Instagram",
+        "link": "https://www.theverge.com/news/841036/facebook-redesign-instagram-photos-feed-algorithm",
+        "published": "2025-12-09T13:36:12-05:00",
+        "source": "The Verge",
+        "summary": "Continuing CEO Mark Zuckerberg's plan to make Facebook \"way more culturally influential than it is today,\" Meta is announcing a bunch of new updates to help you \"cut through the clutter\" and make content in the app. The changes include tweaks to how you see and interact with photos in your feed that could make [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/report/840822/australia-social-media-ban-under-16-response",
+        "title": "Australia boots kids under 16 off social media: how platforms are responding",
+        "link": "https://www.theverge.com/report/840822/australia-social-media-ban-under-16-response",
+        "published": "2025-12-09T13:30:00-05:00",
+        "source": "The Verge",
+        "summary": "Australia is joining a wave of governments around the globe in regulating how kids spend their time online. On December 10th, most major social media platforms will boot children in the country under 16 from their services. Under the law, social platforms will also need to implement a \"reasonable\" age verification method there - while [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/slack-ceo-denise-dresser-joins-openai-chief-revenue-officer/",
+        "title": "OpenAI Hires Slack CEO as New Chief Revenue Officer",
+        "link": "https://www.wired.com/story/slack-ceo-denise-dresser-joins-openai-chief-revenue-officer/",
+        "published": "Tue, 09 Dec 2025 18:35:01 +0000",
+        "source": "WIRED",
+        "summary": "A memo obtained by WIRED confirms Denise Dresser's departure from Slack. She is now headed to OpenAI."
+    },
+    {
+        "id": "https://gizmodo.com/instacart-charging-customers-different-prices-for-same-products-study-finds-2000697348",
+        "title": "Instacart Charging Customers Different Prices for Same Products, Study Finds",
+        "link": "https://gizmodo.com/instacart-charging-customers-different-prices-for-same-products-study-finds-2000697348",
+        "published": "Tue, 09 Dec 2025 19:05:48 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"\" class=\"attachment-full size-full wp-post-image\" height=\"1028\" src=\"https://gizmodo.com/app/uploads/2020/04/wu1cfzhgemcr8rai66hx.jpg\" width=\"1828\" /><br /><br />Welcome to the surveillance pricing era."
+    },
+    {
+        "id": "https://gizmodo.com/avatar-fire-and-ash-isnt-about-spectacle-its-about-family-2000696851",
+        "title": "\u2018Avatar: Fire and Ash\u2019 Isn\u2019t About Spectacle, It\u2019s About Family",
+        "link": "https://gizmodo.com/avatar-fire-and-ash-isnt-about-spectacle-its-about-family-2000696851",
+        "published": "Tue, 09 Dec 2025 19:00:38 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Avatar Interview 4\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Avatar-Interview-4.jpg\" width=\"1920\" /><br /><br />io9 spoke with several members of the cast of the upcoming 'Avatar' sequel, who dove deep into the real-world implications of their characters."
+    },
+    {
+        "id": "https://gizmodo.com/the-sun-survived-a-close-call-with-two-massive-stars-4-4-million-years-ago-data-shows-2000697308",
+        "title": "The Sun Survived a Close Call With 2 Massive Stars 4.4 Million Years Ago, Data Shows",
+        "link": "https://gizmodo.com/the-sun-survived-a-close-call-with-two-massive-stars-4-4-million-years-ago-data-shows-2000697308",
+        "published": "Tue, 09 Dec 2025 18:20:20 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"local interstellar clouds\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/local-interstellar-cloud.jpg\" width=\"1920\" /><br /><br />The encounter left behind a trace in the clouds of gas and dust surrounding our solar system."
+    },
+    {
+        "id": "https://mashable.com/article/hisense-decotv-qled-tv-launch-price",
+        "title": "The Frame isnt the only glamorous 32-inch QLED TV anymore: Meet the $299.99 Hisense S5 D\u00e9coTV",
+        "link": "https://mashable.com/article/hisense-decotv-qled-tv-launch-price",
+        "published": "Tue, 09 Dec 2025 18:36:44 +0000",
+        "source": "Mashable",
+        "summary": "Hisense's 32-inch D\u00e9coTV QLED Fire TV was unveiled at Amazon for $299.99. Its stylish white curved stand makes it a top bedroom TV contender."
+    },
+    {
+        "id": "https://mashable.com/article/rivian-autonomy-and-ai-day-december-11-predictions",
+        "title": "Rivian expected to talk autonomous driving EV features Dec. 11",
+        "link": "https://mashable.com/article/rivian-autonomy-and-ai-day-december-11-predictions",
+        "published": "Tue, 09 Dec 2025 18:20:46 +0000",
+        "source": "Mashable",
+        "summary": "On December 11, Rivian will hold an \"Autonomy and AI Day\" event. Here's what you can expect."
+    },
+    {
+        "id": "https://mashable.com/article/google-photos-rolls-out-new-video-editing-tools",
+        "title": "Google Photos rolls out new video editing tools",
+        "link": "https://mashable.com/article/google-photos-rolls-out-new-video-editing-tools",
+        "published": "Tue, 09 Dec 2025 18:03:46 +0000",
+        "source": "Mashable",
+        "summary": "Google Photos rolls out new video editing tools"
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-apple-mac-mini-deal",
+        "title": "The Apple Mac Mini deal from Black Friday has returned: Save $120 on the M4 model",
+        "link": "https://mashable.com/article/dec-9-apple-mac-mini-deal",
+        "published": "Tue, 09 Dec 2025 17:41:19 +0000",
+        "source": "Mashable",
+        "summary": "The Apple M4 Mac Mini is back down to its Black Friday price of $479 at Amazon and Best Buy. Save $120 while you can."
+    },
+    {
+        "id": "https://stephenramsay.net/posts/vibe-coding.html",
+        "title": "If you're going to vibe code, why not do it in C?",
+        "link": "https://stephenramsay.net/posts/vibe-coding.html",
+        "published": "Tue, 09 Dec 2025 17:11:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46207505\">Comments</a>"
     }
 ]
